[gd_scene load_steps=4 format=3 uid="uid://lbgm7pj2bmv"]

[ext_resource type="Script" uid="uid://caonxqjkgf2tx" path="res://scripts/deck.gd" id="1_rm46f"]
[ext_resource type="Texture2D" uid="uid://7dp8il8k8int" path="res://sprites/deck.png" id="2_5yyq2"]
[ext_resource type="PackedScene" uid="uid://tfgdy6vimq0r" path="res://scenes/speed_counter.tscn" id="2_v30ka"]

[node name="Deck" type="Node2D"]
script = ExtResource("1_rm46f")

[node name="SpeedCounter" parent="." instance=ExtResource("2_v30ka")]

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = -35.0
offset_top = -52.0
offset_right = 35.0
offset_bottom = 52.0
texture_normal = ExtResource("2_5yyq2")
metadata/_edit_use_anchors_ = true

[node name="CardAmount" type="Label" parent="."]
visible = false
offset_left = 47.0
offset_top = -51.0
offset_right = 57.0
offset_bottom = -28.0
text = "5"

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
